--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title>404</title>
-<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
+<link href="../../static/css/bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- Custom Theme files -->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="../../static/css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!-- Custom Theme files -->
-<script src="js/jquery.min.js"></script>
+<script src="../../static/js/jquery.min.js"></script>
 <!-- Custom Theme files -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -32,7 +32,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="error-content">
 			<div class="top-header span_top">
 				<div class="logo">
-					<a href="index.html"><img src="images/logo.png" alt="" width="30%" /></a>
+					<a href="index.html"><img src="../../static/images/logo.png" alt="" width="30%" /></a>
+				</div>
+                <div class="login">
+					<a>Log in</a><span>|</span><a>Sign up</a>
 				</div>
 				<div class="search v-search">
 					<form>
@@ -43,16 +46,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="clearfix"></div>
 			</div>
 			<div class="error-404 text-center">
-				<h2>404</h2>
-				<p>Sorry this was unexpected</p>
-				<a class="b-home" href="index.html">Back to Home</a>
+				<h2>Lost your way?</h2>
+				<p>Sorry, we can't find that page. You'll find lots to explore on the home page.</p>
+				<a class="b-home" href="index.html">Moviehub Home</a>
 			</div>	
 	<div class="footer">
 		<h6>Disclaimer : </h6>
-		<p class="claim">This is a freebies and not an official website, I have no intention of disclose any movie, brand, news.My goal here is to train or excercise my skill and share this freebies.</p>
-		<a href="example@mail.com">example@mail.com</a>
+		<p class="claim">This is a free and unofficial website, I have no intention to disclose any movie, brand or news. My goal here is to improve my skills and finish my graduation project.</p>
+		<a href="20174210@cqu.edu.cn">20174210@cqu.edu.cn</a>
 		<div class="copyright">
-			<p>Copyright &copy; 2015.Company name All rights reserved.<a target="_blank" href="http://www.cssmoban.com/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a> - More Templates <a href="http://www.cssmoban.com/" target="_blank" title="手机网站模板">手机网站模板</a> </p>
+			<p>Copyright &copy; 2021. Rodrick All rights reserved.</p>
 		</div>
 	</div>	
 	</div>
