--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title>Contact</title>
-<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
+<link href="../../static/css/bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- Custom Theme files -->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="../../static/css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!-- Custom Theme files -->
-<script src="js/jquery.min.js"></script>
+<script src="../../static/js/jquery.min.js"></script>
 <!-- Custom Theme files -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -32,7 +32,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="contact-content">
 			<div class="top-header span_top">
 				<div class="logo">
-					<a href="index.html"><img src="images/logo.png" alt="" width="30%" /></a>
+					<a href="index.html"><img src="../../static/images/logo.png" alt="" width="30%" /></a>
+				</div>
+                <div class="login">
+					<a>Log in</a><span>|</span><a>Sign up</a>
 				</div>
 				<div class="search v-search">
 					<form>
