--- a/app/templates/reviews.html
+++ b/app/templates/reviews.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title>Reviews</title>
-<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
+<link href="../../static/css/bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- Custom Theme files -->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="../../static/css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!-- Custom Theme files -->
-<script src="js/jquery.min.js"></script>
+<script src="../../static/js/jquery.min.js"></script>
 <!-- Custom Theme files -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -32,7 +32,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="review-content">
 			<div class="top-header span_top">
 				<div class="logo">
-					<a href="index.html"><img src="images/logo.png" alt="" width="30%" /></a>
+					<a href="index.html"><img src="../../static/images/logo.png" alt="" width="30%" /></a>
+				</div>
+                <div class="login">
+					<a>Log in</a><span>|</span><a>Sign up</a>
 				</div>
 				<div class="search v-search">
 					<form>
@@ -47,7 +50,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="col-md-9 reviews-grids">
 						<div class="review">
 							<div class="movie-pic">
-								<a href="single.html"><img src="images/r4.jpg" alt="" /></a>
+								<a href="single.html"><img src="../../static/images/r4.jpg" alt="" /></a>
 							</div>
 							<div class="review-info">
 								<a class="span" href="single.html">Lorem  <i>Movie Review</i></a>
@@ -106,7 +109,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="review">
 							<div class="movie-pic">
-								<a href="single.html"><img src="images/r6.jpg" alt="" /></a>
+								<a href="single.html"><img src="../../static/images/r6.jpg" alt="" /></a>
 							</div>
 							<div class="review-info">
 								<a class="span" href="single.html">Lorem  <i>Movie Review</i></a>
@@ -165,7 +168,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="review">
 							<div class="movie-pic">
-								<a href="single.html"><img src="images/r5.jpg" alt="" /></a>
+								<a href="single.html"><img src="../../static/images/r5.jpg" alt="" /></a>
 							</div>
 							<div class="review-info">
 								<a class="span" href="single.html">Lorem  <i>Movie Review</i></a>
@@ -224,7 +227,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="review">
 							<div class="movie-pic">
-								<a href="single.html"><img src="images/r1.jpg" alt="" /></a>
+								<a href="single.html"><img src="../../static/images/r1.jpg" alt="" /></a>
 							</div>
 							<div class="review-info">
 								<a class="span" href="single.html">Lorem  <i>Movie Review</i></a>
@@ -283,7 +286,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="review">
 							<div class="movie-pic">
-								<a href="single.html"><img src="images/r3.jpg" alt="" /></a>
+								<a href="single.html"><img src="../../static/images/r3.jpg" alt="" /></a>
 							</div>
 							<div class="review-info">
 								<a class="span" href="single.html">Lorem  <i>Movie Review</i></a>
@@ -346,27 +349,27 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<h3>Featured Today in Movie Reviews</h3>
 							<ul>
 								<li>
-									<a href="single.html"><img src="images/f1.jpg" alt="" /></a>
+									<a href="single.html"><img src="../../static/images/f1.jpg" alt="" /></a>
 									<p>lorem movie review</p>
 								</li>
 								<li>
-									<a href="single.html"><img src="images/f2.jpg" alt="" /></a>
+									<a href="single.html"><img src="../../static/images/f2.jpg" alt="" /></a>
 									<p>lorem movie review</p>
 								</li>
 								<li>
-									<a href="single.html"><img src="images/f3.jpg" alt="" /></a>
+									<a href="single.html"><img src="../../static/images/f3.jpg" alt="" /></a>
 									<p>lorem movie review</p>
 								</li>
 								<li>
-									<a href="single.html"><img src="images/f4.jpg" alt="" /></a>
+									<a href="single.html"><img src="../../static/images/f4.jpg" alt="" /></a>
 									<p>lorem movie review</p>
 								</li>
 								<li>
-									<a href="single.html"><img src="images/f5.jpg" alt="" /></a>
+									<a href="single.html"><img src="../../static/images/f5.jpg" alt="" /></a>
 									<p>lorem movie review</p>
 								</li>
 								<li>
-									<a href="single.html"><img src="images/f6.jpg" alt="" /></a>
+									<a href="single.html"><img src="../../static/images/f6.jpg" alt="" /></a>
 									<p>lorem movie review</p>
 								</li>
 								<div class="clearfix"></div>
@@ -377,7 +380,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<h3>Featured Today in Entertainment</h3>
 							<ul>
 								<li class="ent">
-									<a href="single.html"><img src="images/f6.jpg" alt="" /></a>
+									<a href="single.html"><img src="../../static/images/f6.jpg" alt="" /></a>
 								</li>
 								<li>
 									<a href="single.html">Watch ‘Bombay Velvet’ trailer during WC match</a>
@@ -387,7 +390,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</ul>
 							<ul>
 								<li class="ent">
-									<a href="single.html"><img src="images/f5.jpg" alt="" /></a>
+									<a href="single.html"><img src="../../static/images/f5.jpg" alt="" /></a>
 								</li>
 									<li>
 									<a href="single.html">Watch ‘Bombay Velvet’ trailer during WC match</a>
@@ -397,7 +400,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</ul>
 							<ul>
 								<li class="ent">
-									<a href="single.html"><img src="images/f3.jpg" alt="" /></a>
+									<a href="single.html"><img src="../../static/images/f3.jpg" alt="" /></a>
 								</li>
 								<li>
 									<a href="single.html">Watch ‘Bombay Velvet’ trailer during WC match</a>
@@ -407,7 +410,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</ul>
 							<ul>
 								<li class="ent">
-									<a href="single.html"><img src="images/f4.jpg" alt="" /></a>
+									<a href="single.html"><img src="../../static/images/f4.jpg" alt="" /></a>
 								</li>
 								<li>
 									<a href="single.html">Watch ‘Bombay Velvet’ trailer during WC match</a>
@@ -417,7 +420,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</ul>
 							<ul>
 								<li class="ent">
-									<a href="single.html"><img src="images/f2.jpg" alt="" /></a>
+									<a href="single.html"><img src="../../static/images/f2.jpg" alt="" /></a>
 								</li>
 								<li>
 									<a href="single.html">Watch ‘Bombay Velvet’ trailer during WC match</a>
@@ -427,7 +430,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</ul>
 							<ul>
 								<li class="ent">
-									<a href="single.html"><img src="images/f1.jpg" alt="" /></a>
+									<a href="single.html"><img src="../../static/images/f1.jpg" alt="" /></a>
 								</li>
 								<li>
 									<a href="single.html">Watch ‘Bombay Velvet’ trailer during WC match</a>
@@ -440,7 +443,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<h4>You might also like</h4>
 				<div class="might-grid">
 					<div class="grid-might">
-						<a href="single.html"><img src="images/mi.jpg" class="img-responsive" alt=""> </a>
+						<a href="single.html"><img src="../../static/images/mi.jpg" class="img-responsive" alt=""> </a>
 					</div>
 					<div class="might-top">
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p> 
@@ -450,7 +453,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="might-grid">
 					<div class="grid-might">
-						<a href="single.html"><img src="images/mi1.jpg" class="img-responsive" alt=""> </a>
+						<a href="single.html"><img src="../../static/images/mi1.jpg" class="img-responsive" alt=""> </a>
 					</div>
 					<div class="might-top">
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p> 
@@ -460,7 +463,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="might-grid">
 					<div class="grid-might">
-						<a href="single.html"><img src="images/mi2.jpg" class="img-responsive" alt=""> </a>
+						<a href="single.html"><img src="../../static/images/mi2.jpg" class="img-responsive" alt=""> </a>
 					</div>
 					<div class="might-top">
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p> 
@@ -470,7 +473,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="might-grid">
 					<div class="grid-might">
-						<a href="single.html"><img src="images/mi3.jpg" class="img-responsive" alt=""> </a>
+						<a href="single.html"><img src="../../static/images/mi3.jpg" class="img-responsive" alt=""> </a>
 					</div>
 					<div class="might-top">
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p> 
@@ -501,12 +504,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 		<div class="review-slider">
 			 <ul id="flexiselDemo1">
-			<li><img src="images/r1.jpg" alt=""/></li>
-			<li><img src="images/r2.jpg" alt=""/></li>
-			<li><img src="images/r3.jpg" alt=""/></li>
-			<li><img src="images/r4.jpg" alt=""/></li>
-			<li><img src="images/r5.jpg" alt=""/></li>
-			<li><img src="images/r6.jpg" alt=""/></li>
+			<li><img src="../../static/images/r1.jpg" alt=""/></li>
+			<li><img src="../../static/images/r2.jpg" alt=""/></li>
+			<li><img src="../../static/images/r3.jpg" alt=""/></li>
+			<li><img src="../../static/images/r4.jpg" alt=""/></li>
+			<li><img src="../../static/images/r5.jpg" alt=""/></li>
+			<li><img src="../../static/images/r6.jpg" alt=""/></li>
 		</ul>
 			<script type="text/javascript">
 		$(window).load(function() {
@@ -535,14 +538,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			});
 			});
 		</script>
-		<script type="text/javascript" src="js/jquery.flexisel.js"></script>	
+		<script type="text/javascript" src="../../static/js/jquery.flexisel.js"></script>
 		</div>		
 	<div class="footer">
 		<h6>Disclaimer : </h6>
-		<p class="claim">This is a freebies and not an official website, I have no intention of disclose any movie, brand, news.My goal here is to train or excercise my skill and share this freebies.</p>
-		<a href="example@mail.com">example@mail.com</a>
+		<p class="claim">This is a free and unofficial website, I have no intention to disclose any movie, brand or news. My goal here is to improve my skills and finish my graduation project.</p>
+		<a href="20174210@cqu.edu.cn">20174210@cqu.edu.cn</a>
 		<div class="copyright">
-			<p>Copyright &copy; 2015.Company name All rights reserved.<a target="_blank" href="http://www.cssmoban.com/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a> - More Templates <a href="http://www.cssmoban.com/" target="_blank" title="手机网站模板">手机网站模板</a> </p>
+			<p>Copyright &copy; 2021. Rodrick All rights reserved.</p>
 		</div>
 	</div>	
 	</div>
