--- a/app/templates/videos.html
+++ b/app/templates/videos.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title>Videos</title>
-<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
+<link href="../../static/css/bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- Custom Theme files -->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="../../static/css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!-- Custom Theme files -->
-<script src="js/jquery.min.js"></script>
+<script src="../../static/js/jquery.min.js"></script>
 <!-- Custom Theme files -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -32,8 +32,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="video-content">
 			<div class="top-header span_top">
 				<div class="logo">
-					<a href="index.html"><img src="images/logo.png" alt="" width="30%" /></a>
-				</div>ß
+					<a href="index.html"><img src="../../static/images/logo.png" alt="" width="30%" /></a>
+				</div>
+                <div class="login">
+					<a>Log in</a><span>|</span><a>Sign up</a>
+				</div>
 				<div class="search v-search">
 					<form>
 						<input type="text" value="Search.." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search..';}"/>
@@ -49,8 +52,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 				</div>
 				<!-- pop-up-box --> 
-		<link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all" />
-		<script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
+		<link href="../../static/css/popuo-box.css" rel="stylesheet" type="text/css" media="all" />
+		<script src="../../static/js/jquery.magnific-popup.js" type="text/javascript"></script>
 		 <script>
 				$(document).ready(function() {
 				$('.popup-with-zoom-anim').magnificPopup({
@@ -71,12 +74,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 				<div class="content-grids">
 					<div class="content-grid">
-						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="images/gridallbum1.jpg" title="allbum-name" /></a>
+						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="../../static/images/gridallbum1.jpg" title="allbum-name" /></a>
 						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
 						<ul>
-							<li><a href="#"><img src="images/likes.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/views.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/link.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/likes.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/views.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/link.png" title="image-name" /></a></li>
 						</ul>
 						<a class="button play-icon popup-with-zoom-anim" href="#small-dialog">Watch now</a>
 					</div>
@@ -84,112 +87,112 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<iframe  src="https://www.youtube.com/embed/2LqzF5WauAw" frameborder="0" allowfullscreen></iframe>
 					</div>
 					<div class="content-grid">
-						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="images/gridallbum2.jpg" title="allbum-name" /></a>
+						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="../../static/images/gridallbum2.jpg" title="allbum-name" /></a>
 						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
 						<ul>
-							<li><a href="#"><img src="images/likes.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/views.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/link.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/likes.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/views.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/link.png" title="image-name" /></a></li>
 						</ul>
 						<a class="button play-icon popup-with-zoom-anim" href="#small-dialog">Watch now</a>
 					</div>
 					<div class="content-grid">
-						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="images/gridallbum3.jpg" title="allbum-name" /></a>
+						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="../../static/images/gridallbum3.jpg" title="allbum-name" /></a>
 						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
 						<ul>
-							<li><a href="#"><img src="images/likes.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/views.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/link.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/likes.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/views.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/link.png" title="image-name" /></a></li>
 						</ul>
 						<a class="button play-icon popup-with-zoom-anim" href="#small-dialog">Watch now</a>
 					</div>
 					<div class="content-grid last-grid">
-						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="images/gridallbum4.jpg" title="allbum-name" /></a>
+						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="../../static/images/gridallbum4.jpg" title="allbum-name" /></a>
 						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
 						<ul>
-							<li><a href="#"><img src="images/likes.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/views.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/link.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/likes.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/views.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/link.png" title="image-name" /></a></li>
 						</ul>
 						<a class="button play-icon popup-with-zoom-anim" href="#small-dialog">Watch now</a>
 					</div>
 					<div class="content-grid">
-						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="images/gridallbum5.jpg" title="allbum-name" /></a>
+						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="../../static/images/gridallbum5.jpg" title="allbum-name" /></a>
 						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
 						<ul>
-							<li><a href="#"><img src="images/likes.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/views.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/link.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/likes.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/views.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/link.png" title="image-name" /></a></li>
 						</ul>
 						<a class="button play-icon popup-with-zoom-anim" href="#small-dialog">Watch now</a>
 					</div>
 					<div class="content-grid">
-						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="images/gridallbum6.jpg" title="allbum-name" /></a>
+						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="../../static/images/gridallbum6.jpg" title="allbum-name" /></a>
 						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
 						<ul>
-							<li><a href="#"><img src="images/likes.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/views.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/link.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/likes.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/views.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/link.png" title="image-name" /></a></li>
 						</ul>
 						<a class="button play-icon popup-with-zoom-anim" href="#small-dialog">Watch now</a>
 					</div>
 					<div class="content-grid">
-						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="images/gridallbum7.jpg" title="allbum-name" /></a>
+						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="../../static/images/gridallbum7.jpg" title="allbum-name" /></a>
 						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
 						<ul>
-							<li><a href="#"><img src="images/likes.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/views.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/link.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/likes.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/views.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/link.png" title="image-name" /></a></li>
 						</ul>
 						<a class="button play-icon popup-with-zoom-anim" href="#small-dialog">Watch now</a>
 					</div>
 					<div class="content-grid last-grid">
-						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="images/gridallbum8.jpg" title="allbum-name" /></a>
+						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="../../static/images/gridallbum8.jpg" title="allbum-name" /></a>
 						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
 						<ul>
-							<li><a href="#"><img src="images/likes.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/views.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/link.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/likes.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/views.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/link.png" title="image-name" /></a></li>
 						</ul>
 						<a class="button play-icon popup-with-zoom-anim" href="#small-dialog">Watch now</a>
 					</div>
 					<div class="content-grid">
-						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="images/gridallbum9.jpg" title="allbum-name" /></a>
+						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="../../static/images/gridallbum9.jpg" title="allbum-name" /></a>
 						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
 						<ul>
-							<li><a href="#"><img src="images/likes.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/views.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/link.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/likes.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/views.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/link.png" title="image-name" /></a></li>
 						</ul>
 						<a class="button play-icon popup-with-zoom-anim" href="#small-dialog">Watch now</a>
 					</div>
 					<div class="content-grid">
-						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="images/gridallbum10.jpg" title="allbum-name" /></a>
+						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="../../static/images/gridallbum10.jpg" title="allbum-name" /></a>
 						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
 						<ul>
-							<li><a href="#"><img src="images/likes.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/views.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/link.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/likes.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/views.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/link.png" title="image-name" /></a></li>
 						</ul>
 						<a class="button play-icon popup-with-zoom-anim" href="#small-dialog">Watch now</a>
 					</div>
 					<div class="content-grid">
-						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="images/gridallbum11.jpg" title="allbum-name" /></a>
+						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="../../static/images/gridallbum11.jpg" title="allbum-name" /></a>
 						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
 						<ul>
-							<li><a href="#"><img src="images/likes.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/views.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/link.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/likes.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/views.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/link.png" title="image-name" /></a></li>
 						</ul>
 						<a class="button play-icon popup-with-zoom-anim" href="#small-dialog">Watch now</a>
 					</div>
 					<div class="content-grid last-grid">
-						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="images/gridallbum1.jpg" title="allbum-name" /></a>
+						<a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="../../static/images/gridallbum1.jpg" title="allbum-name" /></a>
 						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
 						<ul>
-							<li><a href="#"><img src="images/likes.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/views.png" title="image-name" /></a></li>
-							<li><a href="#"><img src="images/link.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/likes.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/views.png" title="image-name" /></a></li>
+							<li><a href="#"><img src="../../static/images/link.png" title="image-name" /></a></li>
 						</ul>
 						<a class="button play-icon popup-with-zoom-anim" href="#small-dialog">Watch now</a>
 					</div>
