--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -64,7 +64,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 
 				<div class="login">
-					<a>Log in</a><span>|</span><a>Sign up</a>
+					<a href="login.html">Log in</a><span>|</span><a href="register.html">Sign up</a>
 				</div>
 				<div class="search">
 					<form>
@@ -75,16 +75,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="clearfix"></div>
 			</div>
 		</div>
-
                     <div class="header-img">
                     </div>
                     <div class="header-info">
                         <h1>Beauty and the Beast</h1>
                         <p class="age"><a href="#">All Age</a> Bill Condon</p>
-                        <p class="review">Rating	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: &nbsp;&nbsp;  7.1/10</p>
-                        <p class="review reviewgo">Genre	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; : &nbsp;&nbsp;  Family, Fantasy, Musical</p>
-                        <p class="review">Release &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: &nbsp;&nbsp; 17 March 2017</p>
-                        <p class="review">Run time &nbsp;&nbsp;&nbsp;&nbsp;: &nbsp;&nbsp;  2h 9min</p>
+                        <p>Rating	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: &nbsp;&nbsp;  7.1/10</p>
+                        <p>Genre	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; : &nbsp;&nbsp;  Family, Fantasy, Musical</p>
+                        <p>Release &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: &nbsp;&nbsp; 17 March 2017</p>
+                        <p>Run time &nbsp;&nbsp;&nbsp;&nbsp;: &nbsp;&nbsp;  2h 9min</p>
                         <p class="special">A selfish Prince is cursed to become a monster for the rest of his life, unless he learns to fall in love with a beautiful young woman he keeps prisoner.</p>
                         <a class="detail" href="#"><img src="../../static/images/icons/inbox-white.png" style="max-height: 50px; margin-right: 10px"></img>VIEW DETAILS</a>
                     </div>
