--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -64,7 +64,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 
 				<div class="login">
-					<a>Log in</a><span>|</span><a>Sign up</a>
+					<a href="login.html">Log in</a><span>|</span><a href="register.html">Sign up</a>
 				</div>
 				<div class="search">
 					<form>
@@ -76,10 +76,39 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 		</div>
 
-            <div class="single-bg">
-                <div class="single-content">背景模糊</div>
+            <div class="single-bg" style="background: url(//www.themoviedb.org/t/p/w1280/uXDfjJbdP4ijW5hWSBrPrlKpxab.jpg);">
+                <div class="single-poster">
+                    <img src="https://www.themoviedb.org/t/p/w1280/uXDfjJbdP4ijW5hWSBrPrlKpxab.jpg">
+                </div>
+                <div class="single-info">
+                    <h1>Toy Story（1995）</h1>
+                    <p>Adventure|Animation|Children|Comedy|Fantasy · 1h 21min</p>
+                    <h4 style="font-weight: bold;display:inline;">User Score:&nbsp;&nbsp;&nbsp;</h4><h4 style="display:inline;">4.5&nbsp;</h4>
+                    <h4 style="display: inline"> (1,345 Ratings) </h4>
+                    <div class="single-button">
+                        <input type="image" src="../../static/images/icons/heart-yellow.png" style="width: 50px;"/>
+                        <input type="image" src="../../static/images/icons/edit-yellow.png" style="width: 50px;">
+                    </div>
+                    <h3>Overview</h3>
+                    <p>A cowboy doll is profoundly threatened and jealous when a new spaceman figure supplants him as top toy in a boy's room.</p>
+                    <h3>Director</h3>
+                    <p>John Lasseter</p>
+                    <h3>Cast</h3>
+                    <p>Tom Hanks|Tim Allen|Don Rickles</p>
+
+                </div>
             </div>
 
+            <div class="content">
+                 <div class="review">
+                    <h1>Reviews</h1>
+                    <div class="review-content"></div>
+                </div>
+                <div class="recommend">
+                    <h1>Recommend</h1>
+                    <div class="recommend-content"></div>
+                </div>
+            </div>
 
 
 
