--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,7 +20,7 @@ input[type="button"],input[type="submit"]{
 	-ms-transition:0.5s all;
 }
 h1,h2,h3,h4,h5,h6{
-	font-family: Palatino;
+	font-family: 'Open Sans';
 	margin:0;			   
 }	
 p{
@@ -68,11 +68,18 @@ label{
 }
 .header-info h1 {
 	color:#0b0b0b;
-	font-size:3.5em;
+	font-size:40px;
 	font-weight:700;
 	margin-bottom:12px;
 	padding-bottom:7px;
 	border-bottom:1px solid #4b4b4b;
+}
+.header-info p {
+	color:#0b0b0b;
+	font-size:1em;
+	font-weight:400;
+	line-height:1.7em;
+	margin:0.8em 0;
 }
 p.age {
 	color:#0b0b0b;
@@ -173,7 +180,7 @@ i.video1 {
 }
 .menu ul li a{
 	padding:12px 22px;
-	  display: block;
+	display: block;
 }
 .menu ul li a.active {
 	background:#dfb636;
@@ -435,18 +442,21 @@ i.contact1 {
 	color:#0b0b0b;
 	font-size:3.2em;
 	font-weight:700;
+	padding-left: 0;
 }
 .news-left-grid h2 {
 	color:#383838;
 	font-size:2.8em;
 	font-weight:700;
 	margin:10px 0;
+	padding-left: 0;
 }
 .news-left-grid h4 {
 	color: #b8b8b8;
 	font-size: 2.25em;
 	font-weight: 500;
-	margin:3px 0 2.1em 0;
+	margin:1px 0 2.1em 0;
+	padding-left: 0;
 }
 .news-left-grid p {
 	color:#bb7b29;
@@ -488,12 +498,14 @@ i.book {
 	font-size:2.2em;
 	font-weight:700;
 	margin-bottom:0.5em;
+	padding-left: 0;
 }
 .news-right-grid h5 {
 	color:#383838;
 	font-size:1.4em;
 	font-weight:700;
 	margin-bottom:6px;
+	padding-left: 0;
 }
 .news-right-grid label {
 	color:#b8b8b8;
@@ -692,9 +704,7 @@ h3.head {
 	float:left;
 	width:73%;
 }
-.review {
-	margin-top: 4em;
-}
+
 a.span {
 	color: #000;
 	font-size: 1.8em;
@@ -1303,12 +1313,11 @@ font-weight: 700;
 
 .single-bg {
 	width: 100%;
-	height: 500px;
+	height: 600px;
 	position: relative;
-	background: url("https://m.media-amazon.com/images/M/MV5BMDU2ZWJlMjktMTRhMy00ZTA5LWEzNDgtYmNmZTEwZTViZWJkXkEyXkFqcGdeQXVyNDQ2OTk4MzI@._V1_UX182_CR0,0,182,268_AL_.jpg") no-repeat fixed;
 	background-size: cover;
 	box-sizing: border-box;
-	z-index: 1;
+	z-index: -2;
 }
 
 .single-bg:after {
@@ -1319,9 +1328,9 @@ font-weight: 700;
 	left: 0;
 	top: 0;
 	/* 从父元素继承 background 属性的设置 */
-	background: inherit;
-	filter: blur(10px);
-	z-index: 2;
+	background: whitesmoke;
+	filter: blur(200px);
+	z-index: -1;
 }
 
 .single-content {
@@ -1329,9 +1338,142 @@ font-weight: 700;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
-	background-color: black;
-	width: 100%;
-	height: 450px;
+	background-color: white;
+	width: 95%;
+	height: 550px;
 	text-align: center;
-	z-index: 3;
+	z-index: 0;
+}
+
+.single-poster {
+	position: absolute;
+	left: 18%;
+	top: 52%;
+	transform: translate(-50%, -50%);
+	width: 25%;
+	height: 530px;
+	float: left;
+	z-index: 0;
+}
+
+.single-poster img {
+	width: 100%;
+	height: auto;
+}
+
+.single-info {
+	position: absolute;
+	left: 60%;
+	top: 50%;
+	width: 60%;
+	transform: translate(-50%, -50%);
+	height: 500px;
+	margin-left: 40px;
+	z-index: 4;
+}
+
+.single-info h1 {
+	font-size: 35px;
+	font-weight: bold;
+	padding-bottom: 20px;
+}
+
+.single-info p {
+	font-size: 16px;
+	padding-top: 10px;
+	padding-bottom: 20px;
+}
+
+.single-info h2,h3,h4 {
+	padding-top: 20px;
+}
+
+.single-button {
+	position: absolute;!important;
+	top: 0;
+	right: 0;
+}
+.single-button input{
+	margin-left: 10px;
+}
+
+/*评论区 */
+.review {
+	display:inline-block;
+	margin-top: 4em;
+	margin-bottom: 2em;
+	width: 60%;
+}
+.review h1 {
+	margin-left: 20px;
+}
+
+.review-content {
+	margin: 30px;
+	background: #f7f7f7;
+    -webkit-box-shadow: 0 0 30px rgba(0,0,0,0.1);
+    box-shadow: 0 0 30px rgba(0,0,0,0.15);
+    -webkit-transform: translate3d(0, 0px, -2px);
+    transform: translate3d(0, 1px, -2px);
+	width: 100%;
+	height: 400px;
+}
+.recommend{
+	margin-top: 4em;
+	margin-bottom: 2em;
+	margin-left: 2em;
+	display:inline-block;
+}
+.recommend h1{
+	margin-left: 40px;
+}
+.recommend-content {
+	margin: 30px;
+	width: 120%;
+	background: #f7f7f7;
+    -webkit-box-shadow: 0 0 30px rgba(0,0,0,0.1);
+    box-shadow: 0 0 30px rgba(0,0,0,0.15);
+    -webkit-transform: translate3d(0, 0px, -2px);
+    transform: translate3d(0, 1px, -2px);
+	height: 500px;
+}
+
+.content h1,h2,h3,h4,h5 {
+	padding-left: 1em;
+}
+.content p {
+	padding-left: 2em;
+	padding-top: 2em;
+}
+.content a{
+	color: #31b0d5;
+}
+.content input {
+	margin-left: 2em;
+	margin-bottom: 1em;
+	width: 30%;
+}
+#login,#register{
+	padding-left: 2em;
+	padding-top: 1em;
+}
+
+.content button{
+	margin-left: 1.5em;
+	margin-top: 1em;
+	margin-bottom: 1em;
+	width: 150px;
+	padding:8px;
+	background-color: #dfb636;
+	border-color: #dfb636;
+	color: #fff;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	border-radius: 10px; /* future proofing */
+	-khtml-border-radius: 10px; /* for old Konqueror browsers */
+	text-align: center;
+	vertical-align: middle;
+	border: 1px solid transparent;
+	font-weight: 700;
+	font-size:125%
 }
