--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -100,13 +100,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
 
             <div class="content">
-                 <div class="review">
+                 <div class="single-review">
                     <h1>Reviews</h1>
-                    <div class="review-content"></div>
+                    <div class="single-rreview-content"></div>
                 </div>
-                <div class="recommend">
+                <div class="single-recommend">
                     <h1>Recommend</h1>
-                    <div class="recommend-content"></div>
+                    <div class="single-recommend-content"></div>
                 </div>
             </div>
 
