--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1398,17 +1398,17 @@ font-weight: 700;
 }
 
 /*评论区 */
-.review {
+.single-review {
 	display:inline-block;
 	margin-top: 4em;
 	margin-bottom: 2em;
 	width: 60%;
 }
-.review h1 {
+.single-review h1 {
 	margin-left: 20px;
 }
 
-.review-content {
+.single-review-content {
 	margin: 30px;
 	background: #f7f7f7;
     -webkit-box-shadow: 0 0 30px rgba(0,0,0,0.1);
@@ -1418,16 +1418,16 @@ font-weight: 700;
 	width: 100%;
 	height: 400px;
 }
-.recommend{
+.single-recommend{
 	margin-top: 4em;
 	margin-bottom: 2em;
 	margin-left: 2em;
 	display:inline-block;
 }
-.recommend h1{
+.single-recommend h1{
 	margin-left: 40px;
 }
-.recommend-content {
+.single-rrecommend-content {
 	margin: 30px;
 	width: 120%;
 	background: #f7f7f7;
