--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -21,10 +21,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="full">
 			<div class="menu">
 				<ul>
-					<li><a href="index.html"><div class="hm"><i class="home1"></i><i class="home2"></i></div></a></li>
+					<li><a class="active" href="{% url 'index' %}"><i class="home"></i></a></li>
 					<li><a href="videos.html"><div class="video"><i class="videos"></i><i class="videos1"></i></div></a></li>
-					<li><a class="active" href="reviews.html"><div class="cat"><i class="watching"></i><i class="watching1"></i></div></a></li>
-					<li><a href="404.html"><div class="bk"><i class="booking"></i><i class="booking1"></i></div></a></li>
+					<li><a href="reviews.html"><div class="cat"><i class="watching"></i><i class="watching1"></i></div></a></li>
+					<li><a href="{% url '404' %}"><div class="bk"><i class="booking"></i><i class="booking1"></i></div></a></li>
 					<li><a href="contact.html"><div class="cnt"><i class="contact"></i><i class="contact1"></i></div></a></li>
 				</ul>
 			</div>
@@ -32,7 +32,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="header">
 			<div class="top-header">
 				<div class="logo">
-					<a href="index.html"><img src="../../static/images/logo.png" alt="" /></a>
+					<a href="{% url 'index' %}"><img src="../../static/images/logo.png" alt="" /></a>
 
 				</div>
 
@@ -64,7 +64,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 
 				<div class="login">
-					<a href="login.html">Log in</a><span>|</span><a href="register.html">Sign up</a>
+					<a href="{% url 'login' %}">Log in</a><span>|</span><a href="{% url 'register' %}">Sign up</a>
 				</div>
 				<div class="search">
 					<form>
@@ -79,13 +79,56 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <h2>Sign up for an account</h2>
               <p>Signing up for an account is free and easy. Fill out the form below to get started. JavaScript is required to to continue.</p>
               <p id="register">Username</p>
-              <input type="text">
+              <input type="text" name="username">
               <p id="register">Password(4 characters minimum)</p>
-              <input type="password">
+              <input type="password" name="password">
               <p id="register">Password Confirm</p>
-              <input type="password">
+              <input type="password" name="password_confirm">
               <p id="register">Email</p>
-              <input type="email">
+              <input type="email" name="email">
+              <p id="register">Gender</p>
+              <select name="gender" style="margin-left: 2em;margin-bottom: 1em;width: 30%;padding: 3px 0">
+                  <option selected="selected" disabled="disabled"  style='display: none' value=''></option>
+                  <option value ="male">Male</option>
+                  <option value ="Female">Female</option>
+                  <option value="Secret">Secret</option>
+                </select>
+              <p id="register">Age</p>
+              <select name="age" style="margin-left: 2em;margin-bottom: 1em;width: 30%;padding: 3px 0">
+                  <option selected="selected" disabled="disabled"  style='display: none' value=''></option>
+                  <option value=1 >Under 18</option>
+                  <option value=18>18-24</option>
+                  <option value=25>25-34</option>
+                  <option value=35>35-44</option>
+                  <option value=45>45-49</option>
+                  <option value=50>50-55</option>
+                  <option value=56>56+</option>
+                </select>
+              <p id="register">Occupation</p>
+              <select name="occupation" style="margin-left: 2em;margin-bottom: 1em;width: 30%;padding: 3px 0">
+                  <option selected="selected" disabled="disabled"  style='display: none' value=''></option>
+                  <option value =0>"other" or not specified</option>
+                  <option value =1>academic/educator</option>
+                  <option value =2>artist</option>
+                  <option value =3>clerical/admin</option>
+                  <option value =4>college/grad student</option>
+                  <option value =5>customer service</option>
+                  <option value =6>doctor/health care</option>
+                  <option value =7>executive/managerial</option>
+                  <option value =8>farmer</option>
+                  <option value =9>homemaker</option>
+                  <option value =10>K-12 student</option>
+                  <option value =11>lawyer</option>
+                  <option value =12>programmer</option>
+                  <option value =13>retired</option>
+                  <option value =14>sales/marketing</option>
+                  <option value =15>scientist</option>
+                  <option value =16>self-employed</option>
+                  <option value =17>technician/engineer</option>
+                  <option value =18>tradesman/craftsman</option>
+                  <option value =19>unemployed</option>
+                  <option value =20>writer</option>
+                </select>
               <div class="register-button">
                    <button>Sign Up</button>
               </div>
