--- a/static/css/style.css
+++ b/static/css/style.css
@@ -341,7 +341,7 @@ i.contact1 {
 .login {
 	position: relative;
 	padding: 18px 20px;
-	width: 18%;
+	width: 20%;
 	float: right;
 }
 .login a {
@@ -534,6 +534,7 @@ i.book {
 	color:#000;
 }
 .footer {
+	position: relative;
 	background:#f3f3f3;
 	padding:4em 3em;
 }
@@ -1476,4 +1477,237 @@ font-weight: 700;
 	border: 1px solid transparent;
 	font-weight: 700;
 	font-size:125%
+}
+
+.movies {
+	position: relative;
+	width: 100%;
+	height: 1000px;
+	clear: both;
+}
+
+.movies h2 {
+	font-weight: bold;
+	margin: 10px;
+}
+
+.movies-sort {
+	display:inline-block;
+	width: 30%;
+	height: auto;
+}
+
+
+
+* {
+  padding: 0;
+  margin: 0;
+  font-family: 'Lato', sans-serif;
+  box-sizing: border-box;
+}
+
+.float-right {
+  float: right;
+}
+
+.fa {
+  font-size: .8em;
+  line-height: 22px !important;
+}
+
+.movies dropdown {
+  display: inline-block;
+  margin: 20px 50px;
+}
+
+.movies dropdown label,.movies dropdown ul li {
+	display: block;
+	width: 200px;
+	background: whitesmoke;
+	padding: 15px 20px;
+	font-size: 16px;
+}
+
+.movies dropdown label:hover, .movies dropdown ul li:hover {
+  background: #dfb636;
+  color: white;
+  cursor: pointer;
+}
+
+.movies dropdown label {
+  color: #dfb636;
+  border-left: 4px solid #dfb636;
+  border-radius: 5px 5px 0 0;
+  position: relative;
+  z-index: 2;
+}
+
+.movies dropdown input {
+  display: none;
+}
+
+.movies dropdown input ~ ul {
+  position: relative;
+  visibility: hidden;
+  opacity: 0;
+  top: -20px;
+  z-index: 1;
+}
+
+.movies dropdown input:checked + label {
+  background: #dfb636;
+  color: white;
+}
+
+.movies dropdown input:checked ~ ul {
+  visibility: visible;
+  opacity: 1;
+  top: 0;
+}
+
+.movies dropdown ul li:nth-child(1) {
+  border-left: 4px solid #1ABC9C;
+	border-radius: 0 0 5px 5px;
+}
+.movies dropdown ul li:nth-child(1) .fa {
+  color: #1ABC9C;
+}
+.movies dropdown ul li:nth-child(1):hover {
+  background: #1ABC9C;
+  color: black;
+}
+.movies dropdown ul li:nth-child(1):hover .fa {
+  color: white;
+}
+
+.movies dropdown ul li:nth-child(2) {
+  border-left: 4px solid #0072B5;
+}
+.movies dropdown ul li:nth-child(2) .fa {
+  color: #0072B5;
+}
+.movies dropdown ul li:nth-child(2):hover {
+  background: #0072B5;
+  color: white;
+}
+.movies dropdown ul li:nth-child(2):hover .fa {
+  color: white;
+}
+
+.movies dropdown ul li:nth-child(3) {
+  border-left: 4px solid #2C3E50;
+}
+.movies dropdown ul li:nth-child(3) .fa {
+  color: #2C3E50;
+}
+.movies dropdown ul li:nth-child(3):hover {
+  background: #2C3E50;
+  color: white;
+}
+.movies dropdown ul li:nth-child(3):hover .fa {
+  color: white;
+}
+
+.animate {
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s;
+  -ms-transition: all .3s;
+  -ms-transition: all .3s;
+  transition: all .3s;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  /* Chrome and Safari */
+  -moz-backface-visibility: hidden;
+  /* Firefox */
+  -ms-backface-visibility: hidden;
+  /* Internet Explorer */
+}
+
+.search-button button {
+	display: block;
+	margin-bottom: 1em;
+	margin-top: 20px;
+	width: 200px;
+	padding:8px;
+	background-color: #dfb636;
+	border-color: #dfb636;
+	color: #fff;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	border-radius: 10px; /* future proofing */
+	-khtml-border-radius: 10px; /* for old Konqueror browsers */
+	text-align: center;
+	vertical-align: middle;
+	border: 1px solid transparent;
+	font-weight: 700;
+	font-size:125%
+}
+
+.movie-list-single {
+	width: 20%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 20px;
+	overflow: hidden;
+	position: relative;
+}
+
+.movies-list {
+	float: right;
+	width:70%;
+	height: auto;
+	clear: both;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin: auto;
+	margin-bottom: 50px;
+}
+
+.movie-list-single:hover {
+  cursor: pointer;
+}
+
+.overlay {
+  background: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 3;
+  opacity: 0;
+  transition: all ease-in-out 0.5s;
+}
+
+.movie-list-single:hover .overlay {
+  opacity: 1;
+}
+
+.movie-list-single img {
+  width: 100%;
+  z-index: -1;
+  margin: auto;
+  transform: scale(1);
+  transition: all ease-in-out 0.5s;
+}
+
+.movie-list-single:hover img {
+  transform: scale(1.1);
+  filter: blur(2px);
+}
+
+.image-details {
+  text-align: center;
+  color: white;
+  font-size: 20px;
+  z-index: 4;
+  position: absolute;
+  top: 100%;
+  opacity: 0;
+  transition: all ease-in-out 0.5s;
+}
+
+.movie-list-single:hover .image-details {
+  top: 40%;
+  opacity: 1;
 }
